Devops/ex-18/gitops/dev/payment-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-dev
  labels:
    environment: dev
