Devops/ex-18/gitops/dev/payment-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-service-ingress
  namespace: payment-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev-payment.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
